<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp">

        <!--  Photo Tag Name label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:textSize="18sp"
            android:text="@string/photo_tag_type"
            />

        <!-- Photo Tag Name field -->
        <EditText
            android:id="@+id/photo_tag_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <!--  Photo Tag Value label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:textSize="18sp"
            android:text="@string/photo_tag_value"
            />

        <!-- Photo Tag Value field -->
        <EditText
            android:id="@+id/photo_tag_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <!--  Buttons for save, delete, cancel -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/photo_tag_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="15dp"
            android:background="@color/blue"
            android:onClick="save"
            android:text="@string/save_label"
            android:textColor="@color/album_black"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/photo_tag_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="15dp"
            android:background="@color/blue"
            android:onClick="cancel"
            android:text="@string/cancel_label"
            android:textColor="@color/album_black"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/photo_tag_delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@color/blue"
            android:onClick="delete"
            android:text="@string/delete_label"
            android:textColor="@color/album_black"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</LinearLayout>
