<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ListView
            android:id="@+id/photo_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/disjunctiveTagType2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:maxHeight="24dp"
            android:minHeight="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.154"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.857"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/disjunctiveTypeText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.155"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.782" />

        <AutoCompleteTextView
            android:id="@+id/conjunctiveTagValueAC2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:minHeight="12dp"
            android:maxHeight="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.876"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.493"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/conjunctiveValueText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_value"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.876"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.427" />

        <TextView
            android:id="@+id/conjunctiveTypeText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.155"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.427" />

        <Button
            android:id="@+id/disjunctiveSearchButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:background="@color/blue"
            android:onClick="disjunctiveSearch"
            android:text="@string/disjunctive_search"
            android:textColor="@color/album_black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.935"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/disjunctiveTypeText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.155"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.644" />

        <TextView
            android:id="@+id/disjunctiveValueText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_value"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.876"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.644" />

        <TextView
            android:id="@+id/disjunctiveValueText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_value"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.876"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.782" />

        <EditText
            android:id="@+id/disjunctiveTagType1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:maxHeight="24dp"
            android:minHeight="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.154"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.72"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <AutoCompleteTextView
            android:id="@+id/disjunctiveTagValueAC1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:maxHeight="24dp"
            android:minHeight="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.876"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.72"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <AutoCompleteTextView
            android:id="@+id/disjunctiveTagValueAC2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:maxHeight="24dp"
            android:minHeight="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.876"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.859"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/conjunctiveSearchButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:background="@color/blue"
            android:onClick="conjunctiveSearch"
            android:text="@string/conjunctive_search"
            android:textColor="@color/album_black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.572"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/conjunctiveTypeText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.155"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.271" />

        <TextView
            android:id="@+id/conjunctiveValueText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_value"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.876"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.269" />

        <EditText
            android:id="@+id/conjunctiveTagType1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:maxHeight="24dp"
            android:minHeight="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.154"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.359"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/conjunctiveTagType2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:minHeight="12dp"
            android:maxHeight="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.154"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.493"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <AutoCompleteTextView
            android:id="@+id/conjunctiveTagValueAC1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:maxHeight="24dp"
            android:minHeight="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.876"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.359"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/singleTypeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.155"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.015" />

        <TextView
            android:id="@+id/singleValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_value"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.876"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.015" />

        <EditText
            android:id="@+id/singleTagType"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:minHeight="12dp"
            android:maxHeight="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.155"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.076"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <AutoCompleteTextView
            android:id="@+id/singleTagValueAC"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:minHeight="12dp"
            android:maxHeight="24dp"
            android:ems="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.875"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.076"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

        <Button
            android:id="@+id/singe_search_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:background="@color/blue"
            android:onClick="singleSearch"
            android:text="@string/search_by_single_tag"
            android:textColor="@color/album_black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.181"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>